# python-mcp-starter

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
hello_mcp_server/: __init__.py  __main__.py  _debug.py  azure_provider.py  header_middleware.py  server.py
src/hello_py_mcp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/my_mcp_server/: server.py
tests/: test_main.py  test_server.py
