[project]
name = "hello-mcp-server"
version = "0.1.0"
description = "A minimal template for Python MCP applications"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "uvicorn>=0.34.2",
    "click>=8.1.3",
    "anyio>=3.7.0",
    "starlette>=0.28.0",
    "git+https://github.com/ltwlf/python-sdk.git@main"
]

[project.optional-dependencies]
dev = [
    "mcp[cli]>=1.7.1",
    "pytest>=8.0",
    "pytest-asyncio",
    "debugpy"
]

[project.scripts]
hello-mcp-server = "hello_mcp_server.__main__:main"
mcp-debug = "hello_mcp_server._debug:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hello_mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
